fix: small updates to prometheus

--- a/roles/home.prometheus-docker-node-exporter/tasks/main.yml
+++ b/roles/home.prometheus-docker-node-exporter/tasks/main.yml
@@ -12,6 +12,6 @@
             - '--path.rootfs=/host'
           network_mode: host
           pid: host
-          restart: unless-stopped
+          restart: always
           volumes:
             - '/:/host:ro'
