--- a/roles/home.swag/tasks/main.yml
+++ b/roles/home.swag/tasks/main.yml
@@ -55,6 +55,7 @@
             SUBDOMAINS: wildcard
             VALIDATION: duckdns
             DUCKDNSTOKEN: "{{ duckdns.token }}"
+            EMAIL: "{{ duckdns.email }}"
           volumes:
             - /home/pi/swag:/config
           ports:
