--- a/roles/home.swag/tasks/main.yml
+++ b/roles/home.swag/tasks/main.yml
@@ -48,9 +48,9 @@
           cap_add:
             - NET_ADMIN
           environment:
-            PUID: 1001
-            PGID: 1001
-            TZ: America/Los_Angeles
+            PUID: "{{ host_puid }}"
+            PGID: "{{ host_pgid }}"
+            TZ: "{{ host_tz }}"
             URL: abbottland.duckdns.org
             SUBDOMAINS: wildcard
             VALIDATION: duckdns
