--- a/playbooks/rpi.yml
+++ b/playbooks/rpi.yml
@@ -30,11 +30,11 @@
       community.docker.docker_network:
         name: lsio
   roles:
-    # - role: home.dashy
+    - role: home.dashy
     # - role: home.portainer
     # - role: home.mealie
     # - role: home.duckdns
-    - role: home.swag
+    # - role: home.swag
     # - role: home.prometheus-server
     # - role: home.drone-server
     # - role: home.drone-docker-runner
