--- a/inventory.yml
+++ b/inventory.yml
@@ -23,6 +23,11 @@ all:
           ansible_user: pi
           ansible_password: "{{ inventoryPasswords.rpi }}"
           ansible_sudo_pass: "{{ inventoryPasswords.rpi }}"
+        bananapi:
+          ansible_host: 192.168.4.143
+          ansible_user: pi
+          ansible_password: "{{ inventoryPasswords.bananapi }}"
+          ansible_sudo_pass: "{{ inventoryPasswords.bananapi }}"
         room_of_requirement:
           ansible_host: 192.168.4.124
           ansible_user: pabbott
