Setup pihole on bananapi

--- a/host_vars/bananapi.yml
+++ b/host_vars/bananapi.yml
@@ -7,3 +7,5 @@ pip_install_packages:
   - docker-compose
 
 traefik_config_dir: /home/pi/app_config/traefik
+
+pihole_config_dir: /home/pi/app_config/pihole
