--- a/roles/home.traefik/files/traefik.yml
+++ b/roles/home.traefik/files/traefik.yml
@@ -10,6 +10,12 @@ serversTransport:
 entryPoints:
   web:
     address: :80
+    http:
+      redirections:
+        entryPoint:
+          to: websecure
+          scheme: https
+          permanent: true
 
   websecure:
     address: :443
@@ -21,8 +27,8 @@ providers:
   file:
     directory: /etc/traefik/conf.d/
 
-accessLog:
-  filePath: /etc/traefik/access.log
+# accessLog:
+  # filePath: /etc/traefik/access.log
 
 certificatesResolvers:
   cloudflareResolver:
