--- a/roles/home.dashy/files/conf.yml
+++ b/roles/home.dashy/files/conf.yml
@@ -50,7 +50,7 @@ sections:
       - title: Drone
         description: CI/CD Server
         icon: hl-drone
-        url: https://drone.abbottland.duckdns.org
+        url: https://drone.abbottland.io
         target: newtab
         statusCheck: true
         id: 4_1171_drone
