--- a/roles/home.drone-docker-runner/tasks/main.yml
+++ b/roles/home.drone-docker-runner/tasks/main.yml
@@ -14,7 +14,7 @@
           image: drone/drone-runner-docker:1
           environment:
             DRONE_RPC_PROTO: https
-            DRONE_RPC_HOST: drone.abbottland.duckdns.org
+            DRONE_RPC_HOST: drone.abbottland.io
             DRONE_RPC_SECRET: "{{ drone.shared_secret }}"
             DRONE_RUNNER_CAPACITY: 2
             DRONE_RUNNER_NAME: rpi-runner
