Setup prometheus metrics for traefik, and update dashboard

--- a/roles/home.prometheus-server/files/prometheus.yml
+++ b/roles/home.prometheus-server/files/prometheus.yml
@@ -42,3 +42,8 @@ scrape_configs:
   - job_name: 'room_of_requirement'
     static_configs:
       - targets: ['192.168.4.124:9100']      
+
+  # Traefik on banana pi
+  - job_name: 'traefik'
+    static_configs:
+      - targets: ['192.168.4.144:8080']      
