--- a/roles/home.traefik/files/traefik.yml
+++ b/roles/home.traefik/files/traefik.yml
@@ -27,6 +27,9 @@ providers:
   file:
     directory: /etc/traefik/conf.d/
 
+metrics:
+  prometheus: {}
+
 # accessLog:
   # filePath: /etc/traefik/access.log
 
