--- a/playbooks/rpi.yml
+++ b/playbooks/rpi.yml
@@ -7,25 +7,25 @@
         name: lsio
   roles:
     - role: home.dashy
-    - role: home.portainer
-    - role: home.mealie
-    - role: home.prometheus-server
-    - role: home.drone-server
-    - role: home.drone-docker-runner
-    - role: home.grafana
-    - role: home.home-assistant
+#     - role: home.portainer
+#     - role: home.mealie
+#     - role: home.prometheus-server
+#     - role: home.drone-server
+#     - role: home.drone-docker-runner
+#     - role: home.grafana
+#     - role: home.home-assistant
     
 
-- name: Backup important data to Azure each week
-  hosts: rpi
-  tasks:
-    - name: Zip backups
-      with_items: "{{ backup_jobs }}"
-      include_role:
-        name: home.zip.backup
-      vars:
-        path: "{{item.path}}"
-        dest: "{{item.dest}}"
-        job_name: "{{item.job_name}}"
+# - name: Backup important data to Azure each week
+#   hosts: rpi
+#   tasks:
+#     - name: Zip backups
+#       with_items: "{{ backup_jobs }}"
+#       include_role:
+#         name: home.zip.backup
+#       vars:
+#         path: "{{item.path}}"
+#         dest: "{{item.dest}}"
+#         job_name: "{{item.job_name}}"
 
 
