--- a/host_vars/bananapi.yml
+++ b/host_vars/bananapi.yml
@@ -2,10 +2,17 @@ host_puid: "1000"
 host_pgid: "1000"
 host_tz: "America/Los_Angeles"
 
+dns_nameservers: 
+  - "127.0.0.1"
+  # - "75.75.75.75"
+  # - "75.75.76.76"
+
+
 pip_install_packages:
   - docker
   - docker-compose
 
 traefik_config_dir: /home/pi/app_config/traefik
+traefik_dynamic_config_dir: /home/pi/app_config/traefik/conf.d
 
 pihole_config_dir: /home/pi/app_config/pihole
